--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
         <title>Joey's Portfolio Site</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="icon" href="img\favicon.png" type="image/x-icon"/>
-        <link rel="stylesheet" href="css/bootstrap.min.css">
-        <link rel="stylesheet" href="style.css">
+        <link rel="icon" href="portfolioproject__5_\img\favicon.png" type="image/x-icon"/>
+        <link rel="stylesheet" href="portfolioproject__5_\css/bootstrap.min.css">
+        <link rel="stylesheet" href="portfolioproject__5_\style.css">
         <link href="https://fonts.googleapis.com/css?family=Fredoka+One|Open+Sans" rel="stylesheet">
     </head>
     <body class="container">
       <header class="row">
         <div class="col-md-6">
-        <img src="img\Logo.png" alt="Logo" class="logo">
+        <img src="portfolioproject__5_\img\Logo.png" alt="Logo" class="logo">
       </div>
         <div class="col-md-6 text-right">
         <h1>Joey Azizoff</h1>
@@ -26,23 +26,23 @@
           <hr>
         </div>
         <div class="col-md-12">
-          <img src="img\mainimage.png" alt="Main Image" class="img-responsive mainimage">
+          <img src="portfolioproject__5_\img\mainimage.png" alt="Main Image" class="img-responsive mainimage">
         </div>
         <div class="col-md-12">
           <h1 class="text-center">Featured Work</h1>
         </div>
         <div class="col-md-4">
-          <img src="img\website1.png" class="img-responsive align-left" alt="Website One">
+          <img src="portfolioproject__5_\img\website1.png" class="img-responsive align-left" alt="Website One">
           <h2 class="text-center">Website One</h2>
           <p class="text-center"><a href="https://github.com/JoAz111/Web-Development-Portfolio">www.myfirstwebsite.com</a></p>
         </div>
         <div class="col-md-4">
-          <img src="img\website2.png" class="img-responsive align-left" alt="Website Two">
+          <img src="portfolioproject__5_\img\website2.png" class="img-responsive align-left" alt="Website Two">
           <h2 class="text-center">Website Two</h2>
           <p class="text-center"><a href="https://github.com/JoAz111/Web-Development-Portfolio">www.mysecondwebsite.com</a></p>
         </div>
         <div class="col-md-4">
-          <img src="img\website3.png" class="img-responsive align-left" alt="Website Three">
+          <img src="portfolioproject__5_\img\website3.png" class="img-responsive align-left" alt="Website Three">
           <h2 class="text-center">Website Three</h2>
           <p class="text-center"><a href="https://github.com/JoAz111/Web-Development-Portfolio">www.mythirdwebsite.com</a></p>
         </div>
